Added link to stylesheet

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /* A handy list of color names: https://www.w3schools.com/colors/colors_names.asp */
 
 body {
-    background-color:aquamarine
+    background-color:rgb(121, 176, 224)
 }
 
